[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "snap-gpx-track-to-wpts"
version = "0.1.0"
description = "Snap GPX tracks to waypoints for more precise distance calculations"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    {name = "András Hann", email = "dev@hann.io"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Utilities",
]
dependencies = ["gpxpy"]

[project.urls]
Homepage = "https://github.com/andrashann/snap-gpx-track-to-wpts"

[project.scripts]
snap-gpx-track-to-wpts = "snap_gpx_track_to_wpts.cli:main"
